--- a/main.tex
+++ b/main.tex
@@ -141,9 +141,13 @@ The principal social movement studied in this unit is the Movement of the Unempl
 \chapter{``Free Speech'': UC Berkeley from the FSM to the Palestine Solidarity Movement}
 \input{lecture/11}
 
-% \chapter{``Black Power'' and its Progenies: The Black Panther Party \& the New Left}
+\chapter{``Black Power'' and its Progenies: The Black Panther Party \& the New Left}
 
-% \chapter{The Dynamics of Repression}
+\input{lecture/14}
+
+\chapter{The Dynamics of Repression}
+\input{lecture/15}
+
 
 % \chapter{The Stonewall Riots \& the Gay and Trans Liberation Movements}
 
