--- a/reading/rg1-23.tex
+++ b/reading/rg1-23.tex
@@ -23,7 +23,7 @@
     Additionally, this social structure often makes these protests less widespread and less effective.
 
     \textbf{Lecture discussion:} Protest is not a matter of free choice.
-    The main argumetn is that possibilities for protest movements are \textit{structurally shaped}.
+    The main argument is that possibilities for protest movements are \textit{structurally shaped}.
 
     \item How do they characterize the \textbf{transformation of consciousness} that occurs with the emergence of a protest movement? (p. 3-5)
 
