--- a/reading/rg3-11.tex
+++ b/reading/rg3-11.tex
@@ -16,34 +16,34 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item What was the \textbf{Mulford Act} (AB 1591 introduced by Assemblyman Mulford)?
     
     \answer 
     
-    \item 
+    \item How did the passage of the Mulford Act \textbf{impact} the \textbf{Panther's tactics}?
     
     \answer 
     
     
-    \item 
+    \item What are some of the demands forwarded by the Panthers in their \textbf{Ten Point Program}?
    
 
     \answer
     
-    \item 
+    \item What \textbf{set off} the \textbf{Newark Rebellion} of 1967?
     
     \answer 
     
-    \item 
+    \item What \textbf{tactics} were utilized by the rebels in the \textbf{Detroit Rebellion} of 1967?
     
     \answer
     
 
-    \item 
+    \item What do Bloom \& Martin tell us about \textbf{Stop the Draft Week} in the Bay Area in 1967?
     
     \answer
     
-    \item 
+    \item How did Martin Luther \textbf{King's politics} change prior to his assassination?
     
     \answer
     
