--- a/reading/rg3-13.tex
+++ b/reading/rg3-13.tex
@@ -16,36 +16,82 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item What were the various \textbf{community programs} established by the Party beginning in 1969? (pp. 181-183)
+    
+    \answer The programs that the Black Panther Party eventually ran included the Free Breakfast for Children Program, liberation schools, free health clinis, the Free Food Distribution Program, the Free Clothing Program, child development centers, the Free Shoe Program, the Free Plumbing and Maint3enance Program, renter's assistance, legal aid, the Seniors Escorts Program, and the Free Ambulance Program (184).
+    
+    \item What do Bloom \& Martin tell us about the \textbf{Free Breakfast for Children Program}? (pp. 181-182; 184-187)
     
     \answer 
+    According to Bloom \& Martin, the Free Breakfast for Children Program was one of the Black Panther Party's most important programs programatically, politically, ideologically, and publicly (184).
+    Aside from providing a needed service for the community, this program helped the BPP win over the hearts of community members.
+    Additionally, these breakfasts were a place where Black children could learn about Black history (184-185).
     
-    \item 
+    One important part of the program was that it was run and sustained by the community.
+    The BPP would house breakfasts in churches and in the homes of members of the community.
+    They would mostly get ingredients for the breakfasts as donations from local grocery shops, supermarkets and other businesses (184-185).
+    Notably, they would boycott and protest any businesses unwilling to cooperate with the Party's ideals, which pressured businesses to make these donations (185).
+
+    Unfortunately, this program also attracted the attention of the FBI, who sought to undermine the free breakfasts as well as the BPP as a whole.
+    The FBI spread the narrative that the Free Breakfasts for Children program was ``a front for indoctrinating children with Panther propaganda'' (186).
+    Additionally, the police would often raid the locations where the breakfasts were being held (186-187).
     
-    \answer 
-    
-    
-    \item 
-   
+    \item What do Bloom \& Martin tell us about \textbf{women} and \textbf{gender dynamics} within the Party? (pp. 193-195)
 
     \answer
+    On paper, the BPP was all for gender equality.
+    Huey Newton himself once said that the traditional nuclear family and conventional familial norms in general were ``imprisoning, enslaving, and suffocating'' (195).
+    In fact, a lot of the programs that the BPP offered were run mostly by women, and at times women constituted the majority of the members of the Party (193-194).
+    However, the Party itself had a public image of being male-dominated.
+    According to Bloom \& Martin, this was mainly due to the fact that ``First, the Party's continuing masculinism and the society's deeply ingrained gender norms undercut the women's serious battles against sexism within the Party. 
+    Second, even as women's participation becamse increasingly central to the operation of the Party and questions of gender equity loomed large, the Party had no formal and effective mechanisms to root out sexism and misoginy'' (194).
+
+    In general, women were primarily responsible for housework, and, much like in society at large, bore the brunt of family planning and reproductive concerns (195).
     
-    \item 
-    
-    \answer 
-    
-    \item 
+    \item What were the \textbf{strategic objectives} of the \textbf{community programs}? (pp. 195-198)
     
     \answer
+    In short, there were 4 main functions that the community programs accomplished:
+    \begin{enumerate}
+        \item Concrete aid to underserved people.
+        \item Educational and political work within communities.
+        \item Expanding communities' understanding of the process of grassroots institutional development.
+        \item Enabling the BPP to grow and stay alive in the face of state repression.
+        % \item 
+    \end{enumerate}
+    
+    % There were several objectives that the community programs aimed for.
+    % The first was to recast programs as part of the broader insurgency, and to make clear the distinction between revolutionary programs and reform programs.
+    % The BPP offered the former, with the aim of changing the system entirely.
+    % They argued that the latter only served to appease and fool the people receiving aid (195).
+
+    % Another goal of the community program was to highlight inequalities in American society.
+    % In particular, the Free Breakfast for Children Program deepened the awareness of the material lack of resources in Black communities, and pushed these communities to improve the living conditions caused by structural inequalities (196).
+
+    % A third objective (more of a side effect) of the social programs was that they 
+
+    
+    \item What do Bloom \& Martin tell us about \textbf{COINTELPRO}? (pp. 200-203; 210-211)
+    
+    \answer
+    The FBI's counter-intelligence program (COINTELPRO) first arose as a means to target and disrupt the Communist Party USA.
+    This followed from the FBI's tradition of targeting both leftists and black political organizations since its inception (200).
+    They characterized these sorts of movements as ``black nationalist hate-type'' organizations and branded them as ``threats to national security'' (200-202).
+    
+    In relation to the Black Panther Party, COINTELPRO went from not having them on their radar, to being mildly concerned about their activity, and finally to dedicating most of their efforts to repressing and disrupt the Party.
+    This reflected the growing popularity, influence, and membership of the BPP, following the deaths of Martin Luther King Jr and Bobby Hutton (202-203).
     
 
-    \item 
+    \item How does the election of Richard \textbf{Nixon} as president \textbf{impact} the \textbf{Party}? (pp. 209-215)
     
     \answer
+    Mainly, the consequence of Nixon's election to the Black Panther Party was that there was an uptick in state repression.
+    This came about in increased focus from COINTELPRO as well as the police.
+    COINTELPRO, specifically, was focused on forming divisions in the party, with the hopes of making them lose support from people who were more moderate politically (210-211).
+    The police, on the other hand, began performing routine raids of Black Panther Party offices and programs, even going as far as raiding the Free Breakfast for Children Program (211).
+    In these raids, they would routinely arrest (and sometimes imprison) members of the Party on bogus charges (213-215).
+    However, all this increased state repression also had an adverse effect for the government, as the more the state repressed the Panthers, the more support they gained, as more people were inclined to fight against American Imperialism (216).
     
-    \item 
-    
-    \answer
     
 \end{enumerate}
  
