--- a/reading/rg3-18.tex
+++ b/reading/rg3-18.tex
@@ -15,37 +15,83 @@
 
 \maketitle
 
+\underline{\textbf{Bloom \& Martin:}}
+    
+
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item How have various social movement scholars explained the relationship between repression and resistance?
     
     \answer 
+    The main two schools of thought are that either repression breeds resistance or that repression discourages and diminishes insurgency (396).
+    To reconcile these contradictory viewpoints, sociologists have come up with a ``horseshoe theory,'' where they explain that either extreme is detrimental to insurgency but there is a sweet spot in the middle where insurgency can arise.
     
-    \item 
+    \item How do Bloom \& Martin challenge these explanations? 
+    What underlying assumption do they reject?
     
     \answer 
+    The underlying assumption that Bloom \& Martin reject is that repression independently affects the level of mobilization.
+    They challenge these explanations by considering also the level of political reception of the potential allies of the insurgents (397).
+    The big idea is that movements flourish when they can get potential allies to sympathize with their cause.
     
-    
-    \item 
+    \item How do Bloom \& Martin draw upon McAdam's political process approach?
    
 
     \answer
+    Bloom \& Martin borrow McAdam's idea of tactical innovation, and argue that this is influenced by the political context.
+    They argue that insurgent movements proliferate when activists develop tactics that simultaneously undermine authorities and draw support from allies (398).
     
-    \item 
-    
-    \answer 
-    
-    \item 
+    \item How do Bloom \& Martin explain the decline of the Black Panther Party?
     
     \answer
-    
+    They argue that the changing political context, brought about both by repression and concessions (399), ultimately led to the demise of the Black Panther Party.
+    As the Panthers obtained more concessions from the authorities, both party members and the public stopped seeing the need for insurgency altogether, instead reverting to the belief that change could be achieved through proper political channels (398).
+    In other words, concessions made it harder for the BPP to gain support and attract new members.
+    Simultaneously, the government led campaigns to undermine the authority of the Party leadership, by planting infiltrators and by running campaigns to expose intraorganizational violence and corruption (400).
 
-    \item 
+\end{enumerate}
+
+\underline{\textbf{Escobar:}}
+\begin{enumerate}
+
+    
+    \item[5)] How does Escobar present the relationship between police repression and the Chicano Movement? 
     
     \answer
-    
-    \item 
+    Escobar presents the relationship between police repression and the Chicano movement as a dialectical one.
+    The main point that Escobar tries to make is that as the police increased their efforts for repressing the movement, Chicanos deliberately used the the issues of political harassment and police brutality to increase participation in their movement (1488).
+    This led to more aggressive repression, and so on and so forth.
+
+    \item[6)] How does Escobar contrast Mexican American organizations of the 1940s/1950s with the Chicano Movement that emerges in the late 1960s?
     
     \answer
+    Escobar argues that the movements of the 1940s and 1950s used three tactics to try to attain equality:
+    \begin{enumerate}
+        \item Engaging in liberal politics.
+        \item Declaring Mexican-Americans as part of the white race.
+        \item Adopting a pluralistic view of American society in which they could maintain aspects of their Mexican culture but still be integrated into the mainstream of American life.
+    \end{enumerate}
+    Briefly, these movements called for gradual integration of Mexican-Americans into the larger American society (1490).
+
+    On the other hand, the movements of the 1960s mostly rejected these stances, as they considered this form of politics to be too slow to bring about any significant change.
+    These movements defined and adopted the concept of \textit{chicanismo}, which had four main characteristics, mostly rejecting the work done in the 1940s and 1950s:
+    \begin{enumerate}
+        \item They rejected assimilation.
+        \item They declared themselves a nonwhite minority.
+        \item They saw themselves as victims of white racism; they believed they would only achieve equality through collective social and economic empowerment.
+        \item They embraced civil disobedience, as they believed that they could only achieve change through militant and confrontational means.
+    \end{enumerate}
+    This info can be found in page 1491.
+    
+    \item[7)] What different kinds of state repression were targeted at the Chicano movement?
+    
+    \answer
+    There were many forms of state repression, which I summarize below:
+    \begin{enumerate}
+        \item Police brutality, including but not limited to beatings, use of tear gas, and murder (1496).
+        \item Political arrests and incarceration (1497).
+        \item Planting infiltrators to gather information from or otherwise sabotage the movement (1497).
+        \item Spread of misinformation and propaganda (1506).
+    \end{enumerate}
     
 \end{enumerate}
  
