--- a/reading/rg3-20.tex
+++ b/reading/rg3-20.tex
@@ -16,36 +16,78 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item What does \textbf{O'Brian} tell us about the \textbf{homophile organizations} that preceded Stonewall (the Mattachine Society and the Daughters of Bilitis)?
     
     \answer 
+    These were important organizations in the struggle, but they were not as important as the later Gay Liberation movement, mainly because both the Mattachine Society and the Daughters of Bilitis were neither as large nor as combative as the GLF.
+    While they did promote the idea of equality for gay people, they were not keen on disrupting the status quo.
+    Furthermore, both the MS and DB organizations were very heavily repressed by the McCarthyism of that era.
+
+
     
-    \item 
+    \item How does \textbf{O'Brian contrast} the \textbf{Gay Liberation Movement} that emerges with Stonewall to these earlier homophile organizations?
     
     \answer 
+    The Gay Liberation Front/Movement was very much unlike the earlier homophile organizations.
+    Principally, the GLF did not care about conforming to the status quo, and were, in fact, trying to disrupt it.
+    They were much more aggressive in their tactics and much more open about their sexuality, which led to greater disruption, and in turn led to more progress and change in favor of the gay community.
+    The GLF was also much more public, which also drew more attention and membership than the earlier homophile organizations.
+
+    \item What does \textbf{O'Brian} tell us about the \textbf{Stonewall riots}?
+
+    \answer
+    The Stonewall riots came about after the popular Stonewall Inn gay bar was raided by the police.
+    The night of the riot was different, however, as the police was much more aggressive towards the gay patrons of the bar than usual.
+    So, the patrons began to gather outside of the bar instead of dispersing as they usually did.
+    This eventually turned into a crowd, and once the police vans arrived, a full-on riot broke out.
     
     
-    \item 
+    \item According to \textbf{Shepard}, where and when was the \textbf{Trans liberation movement} launched? (p. 95)
    
 
     \answer
+    In Shepard's words:
+    ``The modern transgender movement had its beginnings in 1966, when transgender patrons rioted after being denied services at Compton's Cafeteria in San Francisco.''
     
-    \item 
+    \item Why does \textbf{Shepard} reject the criticism that \textbf{service provision} is ``reformist''?
     
     \answer 
+    Shepard rejects this criticism, as he views providing serviecs as the first step toward building power.
+    As Dean Spade notes, it is hard to do anything when you are lacking your most basic needs (like shelter and food).
     
-    \item 
+    \item What does \textbf{Shepard} tell us about \textbf{Sylvia Rivera}?
     
     \answer
-    
+    She was a trans activist that fought for change across many domains, including trans rights, homelessness, addiction, etc.
+    Part of what made her special was the fact that she had lived through all these things herself, meaning that she had a really good understanding of what the people needed.
+    She was also very much pro-action, and would often take matters into her own hands, with little regard for manners or complacency.
 
-    \item 
+    \item What does \textbf{Shepard} tell us about \textbf{Street Trans Action Revolutionaries} (STAR)?
     
     \answer
+    STAR was formed around 1970 by Sylvia Rivera and Marsha P. Johnston.
+    They provided shelter and food to trans youth.
+    They would often resort to squatting, from hotels to trucks to unoccupied buildings.
     
-    \item 
+    
+    \item How does \textbf{Shepard} critique the \textbf{mainstream Gay Liberation movement} that develops after Stonewall?
     
     \answer
+    Shepard's critique is mostly directed at the fact that the mainstream Gay Liberation movement was mostly focused on the needs of upper-class people.
+    In fact, the Gay Liberation movement was outright exclusive of trans women in particular and trans people in general.
+    The movement would either directly or indirectly exclude trans people from their meetings, and would often not include them or prioritize them when making demands.
+    
+    \item What does \textbf{Miss Major} tell us about the \textbf{Stonewall riots}? (Note that her discussion of parades refers to the early Gay Pride Parades commemorating Stonewall.)
+
+    \answer
+    She tells us that they actually went on for a while, and that they were brutal.
+    The rioters were instructed to make the police angry enough to knock you out;
+    otherwise, they would continue to beat you until they broke a bone or something, which could end up in death.
+    She also sounds annoyed at the people commenting from their windows, because they were watching the riots ensue from the safety of their homes.
+
+
+
+    
     
 \end{enumerate}
  
