--- a/reading/rg3-6.tex
+++ b/reading/rg3-6.tex
@@ -16,34 +16,34 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item Why was the \textbf{Civil Rights Movement inadequate} for addressing the issues concerning Black folks in the \textbf{North} and \textbf{West}? (pp. 25-27)
     
     \answer 
     
-    \item 
+    \item What do Bloom \& Martin tell us about the \textbf{Watts Rebellion}? (pp. 28-30)
     
     \answer 
     
     
-    \item 
+    \item How does the ``\textbf{Black Power}'' slogan first get introduced?
    
 
     \answer
     
-    \item 
+    \item How did Huey Newton and Bobby Seale \textbf{raise money} to purchase guns for the Black Panther Party? (p. 48)
     
     \answer 
     
-    \item 
+    \item Who was \textbf{Elridge Cleaver}?
     
     \answer
     
 
-    \item 
+    \item What do Bloom \& Martin tell us about the police killing of \textbf{Denzil Dowell}? (pp. 50-52)
     
     \answer
     
-    \item 
+    \item How did the Panthers \textbf{mobilize} in \textbf{response} to Dowell's killing? (pp. 53-57)
     
     \answer
     
