--- a/reading/rg4-1.tex
+++ b/reading/rg4-1.tex
@@ -16,36 +16,64 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item How does Behbehanian differentiate the \textbf{strategic orientations of occupations} across the country? (pp. 37-39)
     
     \answer 
+    There are two main strategic differences between the occupations across the country that Behbehanian points out.
+    The first is whether the occupation is oriented as reformist or revolutionary;
+    that is, whether the goal of the occupation is to appeal to authorities or to call for a complete reinvention of the system in question.
+    Movements like Occupy Philly and Occupy Las Vegas both fell under the reformist umbrella, while movements such as Occupy Oakland were more revolutionary in their ambitions.
     
-    \item 
+    The other distinction that Behbehanian makes is the level of disruption that the occupation aims to have.
+    This is mostly correlated with how reformist/revolutionary the occupation is.
+    Specifically, the Occupy Philly and Occupy Las Vegas movements worked with authorities to minimize or avoid disruption to daily life as much as possible, whereas Occupy Oakland refused to cooperate with authorities and put disruption at the front and center of their tactics.
+    
+    \item What was the \textbf{state's initial strategy} in response to the occupation in Oakland? (pp. 41-43)
     
     \answer 
+    The state's initial strategy was to transform the public image of the occupation from an act of defiance to the system into what looked like an exercise of the people's First Amendment rights.
+    The aim of this strategy was to allow occupation and protest, but to also set some rules about \textit{how} to protest.
+    In particular, they claimed that they could protest so long as they were not endangering ``public safety.''
+    The idea was that this would ultimately legitimize the state's revocation of the occupiers' rights whenever they deemed that they were endangering ``public safety.''
     
+    They did this by (initally) not enforcing certain laws that prohibited the occupation of Frank Ogawa park, as well as publicly condoning the occupiers' right to protest and manifest.
+    Additionally, local politicians came out in support of the occupation, with some of them even pitching tents themselves.    
     
-    \item 
+    \item How does Behbehanian characterize the state's \textbf{``soft management'' strategy}?
+    Why did this strategy fail in Oakland? (pp. 45-46; 47-50; 52-56)
    
-
     \answer
+    The ``soft management'' strategy was a strategy that aimed to manage the camp by addressing minor violations that deemed as threats to ``public safety'' while ignoring the illegality of the camp.
+    Soft management included tactics such as handing out fliers outlining the different regulations that the camp should follow, assigning police ``escorts'' to unpermitted marches, and prohibiting activities such as onsite cooking or making loud noises.
+    All the while, the government sought to establish communication and negotiations with the camp.
+
+    The soft management strategy failed in Oakland because of three effective tactics that the OO movement employed: 
+    \begin{enumerate}
+        \item Horizontalism
+        \item Direct action and non-cooperation with the state
+        \item Provoking open confrontation with police and defending the camp as a police-free space
+    \end{enumerate}
+    These tactics were highly effective at undermining the soft management strategy, to the point where it was rendered all but useless.
     
-    \item 
+    \item What is \textbf{horizontalism}? (pp. 47-49)
     
     \answer 
-    
-    \item 
+    Horizontalism is the rejection of leadership and all other forms of authority.
+    Horizontalism is technically an organizational structure, but for the Occupy Oakland movement, it was also a tactic of insurgency, primarily because it made it quite literally impossible for the government to negotiate with the movements' representatives (since there weren't any to begin with).
+     
+    \item According to Behbehanian, what is it that \textbf{most distinguished Occupy Oakland} from the larger Occupy movement? (pp. 52-56) 
     
     \answer
-    
+    The main characteristic that distinguished Occupy Oakland from the larger occupy movement, according to Behbehanian, was their anti-police position.
+    Occupy Oakland was insistent on transforming all interactions with the police into open confrontations.
+    This largely came about due to the fact that Oakland was one of the most diverse Occupy sites in the nation, and many of its POC members had had prior unpleasant encounters with the police.
 
-    \item 
+    \item How does that state's \textbf{discursive strategy} against Occupy Oakland change with the shift to enforcement? (pp. 61-64)
     
     \answer
-    
-    \item 
-    
-    \answer
+    The discursive strategy mostly changed from the state's duty being to protect the people's First Amendment rights to addressing the threats to ``public safety.''
+    This was mostly expressed via labeling the movement's actions as illegal lodging, which was grounds for them being forcibly removed from the camp if they continued to not comply.
+    The state also turned their attention to issues such as public safety, graffiti, and vandalism within the camp to justify their claims.
     
 \end{enumerate}
  
