Add lecture 17 notes

--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,8 @@ The principal social movement studied in this unit is the Movement of the Unempl
 
 % \chapter{The Stonewall Riots \& the Gay and Trans Liberation Movements}
 
-% \chapter{Occupy \& the ``Violence'' of Resistance}
+\chapter{Occupy \& the ``Violence'' of Resistance}
+\input{lecture/17}
 
 % \chapter{The Dialectic of Repression \& Resistance: ``Black Power'' to ``Black Lives Matter''}
 
