--- a/reading/rg4-3.tex
+++ b/reading/rg4-3.tex
@@ -16,36 +16,58 @@
 \maketitle
 
 \begin{enumerate}[label=\arabic*)]
-    \item 
+    \item What does Behbehanian tell us about the state's raid of Occupy Oakland on the morning of October 25th? (pp. 64-66)
     
     \answer 
+    We learn that it was very violent, and the police made use of militarize force.
+    They used tear gas and ``less lethal'' ammunition to fire on the occupiers.
+    They also raided the camp in the early morning in order to avoid alerting the press and the commuters nearby.
     
-    \item 
+    \item What was the state's strategy in response to the movement's attempt to re-occupy Oscar Grant Plaza on the evening of October 25th? (pp. 67-68; 69-70)
     
     \answer 
+    They applied even more violence, using tear gas and flash bangs.
+    They were trying to keep the occupiers at bay, employing a strategy of ``Naked Coercion.''
+    Their objective was to ``\textbf{contain}'' the Plaza.
     
-    
-    \item 
+    \item How does Behbehanian characterize the movement's strategic response to the October 25th raid? (pp. 74-75; 77-79)
    
-
     \answer
+    They were persistent. 
+    They refused to abandon their encampment and forced the state to use even more violence.
+    This was all being done in order to make a spectacle out of the state, making sure that the images of police violence and brutality were being captured and disseminated to the world.
     
-    \item 
+    \item Why does Behbehanian refer to the police shooting of Scott Olsen as the ``Achilles heel'' of the state's strategy? (pp. 74-75; 77-79)
     
     \answer 
+    She refers to the shooting of Scott Olsen as the ``Achilles heel'' of the state's strategy because it was terrible press for the police.
+    In their indiscriminate use of violence, they managed to shoot a young, White man who also happened to be a veteran; 
+    in other words, they shot a person that the general public would care a great deal about.
+    Furthermore, the whole scene was captured vividly on camera, which only led to massive amounts of outrage from the public.
     
-    \item 
+    \item How does the ``spectacular backlash'' of the state's police operation on October 25th create a political opportunity for the movement?
     
     \answer
+    Given that the October 25th raid was widely publicized and heavily criticized, the movement earned a lot of sympathy from the public view.
+    This manifested in good press, donations, and endorsements from other Occupy movements and even artists like Lupe Fiasco.
+    Moreover, they attracted more members, so the movement grew even larger after the state's attempt at repression than it was before.
     
 
-    \item 
+    \item What was the state's strategy in response to Occupy Oakland's General Strike and Port Shutdown? (pp. 84-88)
     
     \answer
+    Having learned from its mistakes, it attempted to make a more targeted use of force.
+    They specifically targeted protesters that had taken over an abandoned public building in order to provide services for the homeless. 
+    They initiated violence against these protesters, and they simultaneously branded them as rebels without a cause; opportunistic youth who were just trying to rebel.
+    This was done in order to bring the police to a more favorable light in the eyes of the public.
     
-    \item 
+    \item How did the state's second raid of Occupy Oakland on November 14th differ from its first raid attempt on October 25th? (pp. 91-93)
     
     \answer
+    The main difference was that it was a lot less violent.
+    They gave the protesters time to leave and refrained from using tear gas or beanbag ammo.
+    This was part of a larger effort to disassociate the tactic of occupation from First Amendment protection.
+    Their goal was to make the ``peaceful'' Occupiers the ones who did not occupy at all.
     
 \end{enumerate}
  
